--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-sonos",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "scripts": {
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
@@ -15,12 +15,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.5",
-    "@glennsl/bs-json": "^3.0.0",
-    "bs-platform": "^4.0.14",
-    "is-ci-cli": "^1.1.1"
+    "@glennsl/bs-jest": "0.4.5",
+    "@glennsl/bs-json": "3.0.0",
+    "bs-platform": "4.0.14",
+    "is-ci-cli": "1.1.1"
   },
   "dependencies": {
-    "sonos": "^1.7.0"
+    "sonos": "1.7.0"
   }
 }
