feat: use decco instead of bs-json
BREAKING CHANGE: Updates parsing API

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -12,8 +12,9 @@
     "module": "commonjs"
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["@glennsl/bs-json"],
+  "bs-dependencies": ["@ryb73/decco"],
   "bs-dev-dependencies": ["@glennsl/bs-jest"],
+  "ppx-flags": ["@ryb73/decco/ppx/ppx_decco.sh"],
   "warnings": {
     "error": "+101"
   },
