--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "scripts": {
     "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
+    "start": "BS_WATCH_CLEAR=true bsb -make-world -w",
     "clean": "bsb -clean-world",
     "test": "is-ci \"test:ci\" \"test:dev\"",
     "test:ci": "npm run build && jest",
@@ -15,12 +15,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "0.4.8",
-    "@glennsl/bs-json": "3.0.0",
-    "bs-platform": "5.0.0",
+    "@glennsl/bs-jest": "0.4.9",
+    "bs-platform": "5.0.6",
     "is-ci-cli": "1.1.1"
   },
   "dependencies": {
-    "sonos": "1.9.0"
+    "@ryb73/decco": "0.1.0",
+    "sonos": "1.12.4"
   }
 }
