--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "scripts": {
     "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
+    "start": "BS_WATCH_CLEAR=true bsb -make-world -w",
     "clean": "bsb -clean-world",
     "test": "is-ci \"test:ci\" \"test:watch\"",
     "test:ci": "jest",
@@ -15,17 +15,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "0.4.8",
-    "@glennsl/bs-json": "3.0.0",
+    "@glennsl/bs-jest": "0.4.9",
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/commit-analyzer": "6.3.0",
     "@semantic-release/git": "7.0.16",
     "@semantic-release/npm": "5.1.15",
     "@semantic-release/release-notes-generator": "7.3.0",
-    "bs-platform": "5.0.0",
+    "bs-platform": "5.0.6",
     "is-ci-cli": "1.1.1"
   },
   "dependencies": {
-    "sonos": "1.9.0"
+    "@ryb73/decco": "0.1.0",
+    "sonos": "1.12.4"
   }
 }
