--- a/bsconfig.json
+++ b/bsconfig.json
@@ -12,9 +12,9 @@
     "module": "commonjs"
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["@ryb73/decco"],
+  "bs-dependencies": ["decco"],
   "bs-dev-dependencies": ["@glennsl/bs-jest"],
-  "ppx-flags": ["@ryb73/decco/ppx/ppx_decco.sh"],
+  "ppx-flags": ["decco/ppx"],
   "warnings": {
     "error": "+101"
   },
